# snake

./: .gitignore  Cargo.toml  README.md  build.cmd  index.html  package-lock.json  run.cmd  webpack.config.js
.github/workflows/: azure-static-web-apps-red-flower-0f2636710.yml
assets/: tibufire 2.xcf
dcalc/: README.md  angular.json  package-lock.json  package.json
dcalc/src/: index.html
dcalc/src/app/: app.component.spec.ts  app.component.ts
site/: index.html  index.js  package-lock.json  package.json
src/: lib.rs  main.rs  snake.rs  world.rs
