[package]
name = "snake-app"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
js-sys = "*"
web-sys = { version = "0.3.60", features = [
    "console",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
] }
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.83"
serde = "*"
anyhow = "1.0.75"
once_cell = "1.18.0"
getrandom = { version = "0.2", features = ["js"] }
