[package]
name = "snake-app"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[dependencies]
rand = "0.8.5"
js-sys = "*"
web-sys = { version = "0.3.60", features = [
    "console",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "TextMetrics",
] }
wasm-bindgen = "0.2.83"
serde = "*"
anyhow = "1.0.75"
once_cell = "1.18.0"
getrandom = { version = "0.2", features = ["js"] }
